Stylistic changes added

--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
             Psychic Game | Home
         </title>
 
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
         <script src="assets/javascript/game.js"></script>
     </head>
 
     <body>
+        <div id="container"></div>
+            <div id="wrapper">
+
         <h1>Psychic Game</h1>
 
         <p>Guess what letter I'm thinking of!</p>
@@ -23,6 +28,7 @@
 
         <p id="guessesSoFar">Your guesses so far: </p>
 
-        
+        </div>
+    </div>
     </body>
 </html>
