added styling and gh link

--- a/index.html
+++ b/index.html
@@ -13,22 +13,18 @@
     </head>
 
     <body>
-        <div id="container"></div>
-            <div id="wrapper">
+        <div class="container">
 
-        <h1>Psychic Game</h1>
+                <h1>Letter Guessing Game</h1>
 
-        <p>Guess what letter I'm thinking of!</p>
+                <p>Guess what letter I'm thinking of!</p>
 
-        <p id="wins">Wins: 0</p>
+                <p id="wins">Wins: 0</p> <p id="losses"> Losses: 0</p>
 
-        <p id="losses">Losses: 0</p>
+                <p id="guessesLeft">Guesses Left: 10</p>
 
-        <p id="guessesLeft">Guesses Left: 9</p>
-
-        <p id="guessesSoFar">Your guesses so far: </p>
-
-        </div>
-    </div>
+                <p id="guessesSoFar">Your guesses so far: </p>
+    </div> <!--Container div-->
+    <div class="footer"><a href="https://github.com/birbjam/psychic-game"><img class="logo" src="assets/images/ghlogo.png"></a></div>
     </body>
 </html>
